force-app/main/default/objects/CCX_Task__c/CCX_Task__c.object-meta.xml
<CustomObject>
    <label>CCX Task</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>CCX Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>