force-app/main/default/objects/CCX_Task__c/fields/CCX_Planned_Budget__c.field-meta.xml
<CustomField>
    <fullName>CCX_Planned_Budget__c</fullName>
    <label>CCX Planned Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>