force-app/main/default/objects/CCX_Task__c/fields/CCX_Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CCX_Planned_Start_Date__c</fullName>
    <label>CCX Planned Start Date</label>
    <type>Date</type>
</CustomField>