force-app/main/default/objects/CCX_Task__c/fields/CCX_Task_Name__c.field-meta.xml
<CustomField>
    <fullName>CCX_Task_Name__c</fullName>
    <label>CCX Task Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>